<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.example.udacity_project_one.screens.listing.ItemData" />

        <variable
            name="viewModel"
            type="com.example.udacity_project_one.screens.details.DetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/primaryBackground"
        tools:context=".screens.details.Details_Fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_banner"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/text_size_large" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_small"
                android:textColor="@color/primaryText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="textVisiblePassword"
                    android:textColor="@color/primaryEdit"
                    android:text="@={item.name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_small"
                android:textColor="@color/primaryText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_size"
                    android:inputType="textVisiblePassword"
                    android:textColor="@color/primaryEdit"
                    android:text="@={item.size}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_small"
                android:textColor="@color/primaryText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_company"
                    android:inputType="textVisiblePassword"
                    android:textColor="@color/primaryEdit"
                    android:text="@={item.company}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_small"
                android:textColor="@color/primaryText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_description"
                    android:inputType="textVisiblePassword"
                    android:textColor="@color/primaryEdit"
                    android:text="@={item.description}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonAddShoe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_small"
                android:onClick="@{() -> viewModel.saveData(item)}"
                android:text="@string/label_button_add_widget"
                android:background="@color/primaryButton"
                android:textColor="@color/primaryText" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_button_cancel"
                android:background="@color/primaryButton"
                android:textColor="@color/primaryText" />
        </LinearLayout>
    </ScrollView>
</layout>